<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CourseProfiles</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="rememberme">Remember Me</string>
    <string name="email">you@email.com</string>
    <string name="password">password</string>
    <string name="title_activity_student_profile">StudentProfileActivity</string>
    <string name="studentName">Student Name</string>
    <string name="school">School</string>
    <string name="major">Major</string>
    <string name="addcourse">+ Add Course</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registernow">Register Now!</string>
    <string name="register">Register</string>
    <string name="firstname">first name</string>
    <string name="lastname">last name</string>
    <string name="confirmpassword">confirm password</string>
    <string name="title_activity_course_profile">CourseProfileActivity</string>
    <string name="coursename">Course Name</string>
    <string name="professor">Professor</string>
    <string name="semester">Semester</string>
    <string name="addassignment">+ Add Assignment</string>
    <string name="addquiz">+ Add Quiz</string>
    <string name="addexam">+ Add Exam</string>
    <string name="addproject">+ Add Project</string>

</resources>
